--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
 
     <div id="lead">
         <div id="lead-content">
-            <h1>Ryan Fitzgerald</h1>
-            <h2>Software Engineer</h2>
+            <h1>Dallin Stewart</h1>
+            <h2>Applied and Computational Math Undergraduate</h2>
             <a href="#" class="btn-rounded-white">Download Resume</a>
         </div>
         <!-- End #lead-content -->
@@ -73,9 +73,20 @@
                 </div>
                 <div class="col-md-8">
                     <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat. Donec
-                        eu vehicula neque. Donec viverra lorem nunc, tempus euismod eros sollicitudin ut. Quisque et tincidunt libero. Donec id pharetra justo. Proin euismod lacinia dolor, eu scelerisque justo tempus pharetra. Vivamus nunc justo, finibus
-                        ut nisl sed, euismod rhoncus nulla. Proin sed magna egestas, egestas ante et, congue eros. In consequat, mauris dapibus tincidunt suscipit, ex libero aliquet diam, at maximus risus enim non leo.
+I am a junior in the Applied and Computational Math Emphasis (ACME) at Brigham Young University. I love to use computer science and math to understand the world around me, make predictions, and solve problems. In my free time I enjoy playing ultimate frisbee and all kinds of board games. </br>
+
+When I started my college education as an electrical engineer. 
+            While I enjoyed my classes, I started to learn more about the possibilities
+            that math enables like machine learning and data analysis. I had a 
+            hard time letting go of my plans to become an engineer, but I get so excited learning
+            about the power that math has to teach a computer to learn and help us 
+            understand the world better that I knew I needed to change directions. </br>
+
+ACME is a unique and intensive intersection of advanced mathematics,
+            statistics, and computer science designed to prepare people to solve
+            21st century problems. As the foundation for modern technology, a deep
+            understanding of mathematics has enabled me to develop successful algorithm design, 
+            effective data analysis, and innovative solutions to modern challenges.
                     </p>
                 </div>
             </div>
@@ -83,32 +94,59 @@
     </div>
     <!-- End #about -->
 
+
     <div id="experience" class="background-alt">
         <h2 class="heading">Experience</h2>
         <div id="experience-timeline">
-            <div data-date="September 2015 – September 2016">
-                <h3>Employer Name</h3>
-                <h4>Job Title</h4>
+
+            <div data-date="June 2023 – August 2023">
+                <h3>Ericsson</h3>
+                <h4>Industry 4.0 Intern</h4>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+Ericsson is one of the leading providers of Information and Communication Technology (ICT), developing technology and services that are easy to use, adopt, and scale. I am excited to contribute to Ericsson at their new Smart Factory in Dallas, Texas this summer.
                 </p>
             </div>
 
-            <div data-date="September 2015 – September 2016">
-                <h3>Employer Name</h3>
-                <h4>Job Title</h4>
+            <div data-date="January 2021 – Present">
+                <h3>BYU Math Department</h3>
+                <h4>Research Assistant</h4>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+I constructed and applied prior distributions for landslide parameters with bayesian statistics and Gaussian Mixture modeling to determine the source of the 1860 Indonesia tsunami with limited and uncertain data.
                 </p>
             </div>
 
-            <div data-date="September 2015 – September 2016">
-                <h3>Employer Name</h3>
-                <h4>Job Title</h4>
+            <div data-date="June 2022 – August 2022">
+                <h3>Wells Fargo</h3>
+                <h4>Intern Analyst</h4>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+Analyzed several algorithms to optimize entity-matching for financed emission calculation</br>
+Improved the tactical approach of the Climate Initiative Analytics team with a Levenshtein distance algorithm</br>
+Taught and presented on entity matching techniques to the data analytics community at Wells Fargo
                 </p>
             </div>
+
+            <div data-date="April 2022 – June 2022">
+                <h3>CMG Financial</h3>
+                <h4>Post Closer</h4>
+                <p>
+Improved data entry performance by proactively developing process automation software
+Uploaded documents and performed corresponding data entry thoroughly and efficiently
+                </p>
+            </div>
+
+	    <div data-date="August 2020 – April 2021">
+                <h3>Arizona Tempe Mission</h3>
+                <h4>Program Director</h4>
+                <p>
+Developed a CMS software to refer over 50 leads per day from Facebook to local representatives</br>
+Executed a $30,000 annual marketing strategy across 10 Facebook pages to improve lead conversion</br>
+Implemented a prescriptive dashboard with KPIs for lead conversions</br>
+Designed and published a website called azldschurches.org</br>
+Performed weekly individual and group training to improve client relationships and performance</br>
+Built a free English class in 7 cities with 42 teachers, 150 students, and 7,000 followers in 8 months
+                </p>
+            </div>
+
         </div>
     </div>
     <!-- End #experience -->
