--- a/index.html
+++ b/index.html
@@ -73,14 +73,14 @@
                 </div>
                 <div class="col-md-8">
                     <p>
-I am a junior in the Applied and Computational Math Emphasis (ACME) at Brigham Young University. I love to use computer science and math to understand the world around me, make predictions, and solve problems. In my free time I enjoy playing ultimate frisbee and all kinds of board games. </br>
+I am a junior in the Applied and Computational Math Emphasis (ACME) at Brigham Young University. I love to use computer science and math to understand the world around me, make predictions, and solve problems. In my free time I enjoy playing ultimate frisbee and all kinds of board games. </br></br>
 
 When I started my college education as an electrical engineer. 
             While I enjoyed my classes, I started to learn more about the possibilities
             that math enables like machine learning and data analysis. I had a 
             hard time letting go of my plans to become an engineer, but I get so excited learning
             about the power that math has to teach a computer to learn and help us 
-            understand the world better that I knew I needed to change directions. </br>
+            understand the world better that I knew I needed to change directions. </br></br>
 
 ACME is a unique and intensive intersection of advanced mathematics,
             statistics, and computer science designed to prepare people to solve
@@ -154,34 +154,49 @@ Built a free English class in 7 cities with 42 teachers, 150 students, and 7,000
     <div id="education">
         <h2 class="heading">Education</h2>
         <div class="education-block">
-            <h3>University of Ottawa</h3>
+            <h3>Brigham Young University</h3>
             <span class="education-date">Sept 2016 - Sept 2017</span>
-            <h4>Bachelor of Science in Computer Science</h4>
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
-            </p>
-        </div>
-        <!-- End .education-block -->
-
-        <div class="education-block">
-            <h3>University of Ottawa</h3>
-            <span class="education-date">Sept 2016 - Sept 2017</span>
-            <h4>Bachelor of Science in Computer Science</h4>
+            <h4>Bachelor of Science in Mathematics</h4>
+	    <p>
+I am studying mathematics in the Applied and Computational Math Emphasis with a minor in computer science. My classes focus on algorithms, optimization, mathematical analysis, deterministic modeling, modeling with uncertainty and data, statistics, and machine learning.</br></br>
+	    </p>
+	    <p>Awards and Accolades<p>
             <ul>
                 <li>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    3.99 GPA graduating April 2024
                 </li>
                 <li>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    Full BYU Academic Scholarship
                 </li>
                 <li>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    Math Department Dean's List 2022
+                </li>
+	    </ul>
+	    <p>Clubs and Activities</p>
+	    <ul>
+                <li>
+                    Electronics Engineer for the BYU Racing Club
+                </li>
+                <li>
+                    Vice President of Events for the BYU Data Science Club
                 </li>
             </ul>
         </div>
         <!-- End .education-block -->
+
+
+	<div class="education-block">
+            <h3>San Ramon Valley High School</h3>
+            <span class="education-date">Sept 2016 - Sept 2017</span>
+            <h4>Graduated with Honors</h4>
+            <p>
+                In high school, I participated in Track and Cross Country, Leadership, and the Robotics Club and earned a 4.34 GPA.
+            </p>
+        </div>
+        <!-- End .education-block -->
     </div>
     <!-- End #education -->
+
 
     <div id="projects" class="background-alt">
         <h2 class="heading">Projects</h2>
