--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@ Built a free English class in 7 cities with 42 teachers, 150 students, and 7,000
         <h2 class="heading">Education</h2>
         <div class="education-block">
             <h3>Brigham Young University</h3>
-            <span class="education-date">Sept 2016 - Sept 2017</span>
+            <span class="education-date">August 2018 - April 2024</span>
             <h4>Bachelor of Science in Mathematics</h4>
 	    <p>
 I am studying mathematics in the Applied and Computational Math Emphasis with a minor in computer science. My classes focus on algorithms, optimization, mathematical analysis, deterministic modeling, modeling with uncertainty and data, statistics, and machine learning.</br></br>
@@ -187,10 +187,10 @@ I am studying mathematics in the Applied and Computational Math Emphasis with a 
 
 	<div class="education-block">
             <h3>San Ramon Valley High School</h3>
-            <span class="education-date">Sept 2016 - Sept 2017</span>
+            <span class="education-date">Sept 2014 - May 2018</span>
             <h4>Graduated with Honors</h4>
             <p>
-                In high school, I participated in Track and Cross Country, Leadership, and the Robotics Club and earned a 4.34 GPA.
+                In high school, I participated in Track and Cross Country, Leadership, and the Robotics Club and earned a 4.23 GPA.
             </p>
         </div>
         <!-- End .education-block -->
@@ -208,11 +208,11 @@ I am studying mathematics in the Applied and Computational Math Emphasis with a 
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
-                        <h3>Project Name Here</h3>
+                        <h3>Family Map App</h3>
                         <p>
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
                         </p>
-                        <a href="#">View Project</a>
+                        <a href="#https://github.com/binDebug3/FamilyMapApp">View Project</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
@@ -224,15 +224,48 @@ I am studying mathematics in the Applied and Computational Math Emphasis with a 
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
-                        <h3>Project Name Here</h3>
+                        <h3>Car Data Web Scraper</h3>
                         <p>
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
                         </p>
-                        <a href="#">View Project</a>
+                        <a href="#https://github.com/binDebug3/Casper">View Project</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
                 <!-- End .project -->
+
+                <div class="project shadow-large">
+                    <div class="project-image">
+                        <img src="images/project.jpg" />
+                    </div>
+                    <!-- End .project-image -->
+                    <div class="project-info">
+                        <h3>Vehicle Analytics Dashboard</h3>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                        </p>
+                        <a href="#https://github.com/davider3/FormulaE/tree/main/Visualization">View Project</a>
+                    </div>
+                    <!-- End .project-info -->
+                </div>
+                <!-- End .project -->
+
+                <div class="project shadow-large">
+                    <div class="project-image">
+                        <img src="images/project.jpg" />
+                    </div>
+                    <!-- End .project-image -->
+                    <div class="project-info">
+                        <h3>Datalog Compiler</h3>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                        </p>
+                        <a href="#https://github.com/binDebug3/Datalog-Compiler">View Project</a>
+                    </div>
+                    <!-- End .project-info -->
+                </div>
+                <!-- End .project -->
+
             </div>
         </div>
     </div>
@@ -241,32 +274,35 @@ I am studying mathematics in the Applied and Computational Math Emphasis with a 
     <div id="skills">
         <h2 class="heading">Skills</h2>
         <ul>
-            <li>JavaScript</li>
             <li>Python</li>
-            <li>Ruby</li>
-            <li>Go</li>
-            <li>Node.js</li>
-            <li>AngularJs</li>
-            <li>React</li>
-            <li>Elixir</li>
             <li>Java</li>
-            <li>C</li>
-            <li>C#</li>
             <li>C++</li>
-            <li>Ruby on Rails</li>
             <li>JavaScript</li>
-            <li>Python</li>
-            <li>Ruby</li>
-            <li>Go</li>
-            <li>Node.js</li>
-            <li>AngularJs</li>
-            <li>React</li>
-            <li>Elixir</li>
-            <li>Java</li>
-            <li>C</li>
-            <li>C#</li>
-            <li>C++</li>
-            <li>Ruby on Rails</li>
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>R</li>
+            <li>SQL</li>
+            <li>AWS</li>
+            <li>Excel</li>
+            <li>Google Sheets</li>
+            <li>Dash</li>
+            <li>Selenium</li>
+            <li>PyTorch</li>
+            <li>Android Programming</li>
+            <li>Projection Modeling</li>
+            <li>Process Automation</li>
+            <li>Database Management</li>
+            <li>Dashboards</li>
+            <li>Data Visualization</li>
+            <li>Algorithm Optimization</li>
+            <li>Linear Regression</li>
+            <li>Optimization Techniques</li>
+            <li>Mathematical Analysis</li>
+            <li>Data Structures</li>
+            <li>Discrete Structures</li>
+            <li>Dynamic Programming</li>
+            <li>Complexity Analysis</li>
+            <li>Graph Theory</li>
         </ul>
     </div>
     <!-- End #skills -->
@@ -274,7 +310,7 @@ I am studying mathematics in the Applied and Computational Math Emphasis with a 
     <div id="contact">
         <h2>Get in Touch</h2>
         <div id="contact-form">
-            <form method="POST" action="https://formspree.io/email@email.com">
+            <form method="POST" action="https://formspree.io/dallinpstewart@email.com">
                 <input type="hidden" name="_subject" value="Contact request from personal website" />
                 <input type="email" name="_replyto" placeholder="Your email" required>
                 <textarea name="message" placeholder="Your message" required></textarea>
@@ -290,7 +326,7 @@ I am studying mathematics in the Applied and Computational Math Emphasis with a 
             <div class="row">
                 <div class="col-sm-5 copyright">
                     <p>
-                        Copyright &copy; <span id="current-year">2022</span> YOUR NAME
+                        Copyright &copy; <span id="current-year">2022</span> Dallin Stewart
                     </p>
                 </div>
                 <div class="col-sm-2 top">
