Update form and resume

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div id="lead-content">
             <h1>Dallin Stewart</h1>
             <h2>Applied and Computational Math Undergraduate</h2>
-            <a href="#" class="btn-rounded-white">Download Resume</a>
+            <a href="images/resume.pdf" class="btn-rounded-white">Download Resume</a>
         </div>
         <!-- End #lead-content -->
 
@@ -212,7 +212,7 @@ I am studying mathematics in the Applied and Computational Math Emphasis with a 
                         <p>
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
                         </p>
-                        <a href="#https://github.com/binDebug3/FamilyMapApp">View Project</a>
+                        <a href="https://github.com/binDebug3/FamilyMapApp">View Project</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
@@ -228,7 +228,7 @@ I am studying mathematics in the Applied and Computational Math Emphasis with a 
                         <p>
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
                         </p>
-                        <a href="#https://github.com/binDebug3/Casper">View Project</a>
+                        <a href="https://github.com/binDebug3/Casper">View Project</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
@@ -244,7 +244,7 @@ I am studying mathematics in the Applied and Computational Math Emphasis with a 
                         <p>
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
                         </p>
-                        <a href="#https://github.com/davider3/FormulaE/tree/main/Visualization">View Project</a>
+                        <a href="https://github.com/davider3/FormulaE/tree/main/Visualization">View Project</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
@@ -260,7 +260,7 @@ I am studying mathematics in the Applied and Computational Math Emphasis with a 
                         <p>
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
                         </p>
-                        <a href="#https://github.com/binDebug3/Datalog-Compiler">View Project</a>
+                        <a href="https://github.com/binDebug3/Datalog-Compiler">View Project</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
@@ -310,7 +310,7 @@ I am studying mathematics in the Applied and Computational Math Emphasis with a 
     <div id="contact">
         <h2>Get in Touch</h2>
         <div id="contact-form">
-            <form method="POST" action="https://formspree.io/dallinpstewart@email.com">
+            <form method="POST" action="https://formspree.io/f/xzbqajlp">
                 <input type="hidden" name="_subject" value="Contact request from personal website" />
                 <input type="email" name="_replyto" placeholder="Your email" required>
                 <textarea name="message" placeholder="Your message" required></textarea>
