Update projects and contact

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div id="lead-content">
             <h1>Dallin Stewart</h1>
             <h2>Applied and Computational Math Undergraduate</h2>
-            <a href="images/resume.pdf" class="btn-rounded-white">Download Resume</a>
+            <a href="images/resume.pdf" target="_blank" class="btn-rounded-white">Download Resume</a>
         </div>
         <!-- End #lead-content -->
 
@@ -210,7 +210,10 @@ I am studying mathematics in the Applied and Computational Math Emphasis with a 
                     <div class="project-info">
                         <h3>Family Map App</h3>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+Family Map is an application that provides a geographical view of your family history. This project offers a detailed view of where you came from by displaying information about important events in your ancestors’ lives such as birth, marriage, death, etc., and plotting their locations on a Google map. I wrote this program as part of my CS 240 Advanced Programming class in 2022.</br></br>
+
+Family Map uses a client/server architecture, which means it consists of two separate programs (a "client" program and a "server" program). The Family Map client is an Android app that lets a user view and interact with their family history information. The Family Map server is a regular, non-Android Java program that runs at a publicly-accessible location in the "cloud" or locally on your machine. </br>
+When a user runs the Family Map client app, they login so that the Family Map server can authenticating the user’s identity. Then the client app retrieves the user’s family history data from the server, which is responsible for maintaining user accounts as well as dispensing family history data for Family Map users.
                         </p>
                         <a href="https://github.com/binDebug3/FamilyMapApp">View Project</a>
                     </div>
@@ -226,7 +229,7 @@ I am studying mathematics in the Applied and Computational Math Emphasis with a 
                     <div class="project-info">
                         <h3>Car Data Web Scraper</h3>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+This project, affectionately named Casper, is a python program that uses selenium to gather data used car sales online from retailers including AutoTrader, CarsDirect, CarGuru, Carvana, Lowbook, and KSL. As of the most recent update, Casper only searches for cars in the Provo, Utah area. After gathering data, Casper scores each car on how good of a deal the sale is and generates a CSV report of the current market in addition to the market history since November 2022 when I first began the project.
                         </p>
                         <a href="https://github.com/binDebug3/Casper">View Project</a>
                     </div>
@@ -242,7 +245,8 @@ I am studying mathematics in the Applied and Computational Math Emphasis with a 
                     <div class="project-info">
                         <h3>Vehicle Analytics Dashboard</h3>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+The Advanced Vehicle Analytics application (A.V.A.) for the BYU Formula E club is a dashboard that displays vehicle and driving data collected from an array of sensors designed to record everything from tire speed to steering wheel angle of an electric race car while driving.</br>
+In addition to providing advanced analytics and feedback, A.V.A. visualizes driving information in a format that makes it easy to understand and gain insight from the data. 
                         </p>
                         <a href="https://github.com/davider3/FormulaE/tree/main/Visualization">View Project</a>
                     </div>
@@ -258,7 +262,7 @@ I am studying mathematics in the Applied and Computational Math Emphasis with a 
                     <div class="project-info">
                         <h3>Datalog Compiler</h3>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+Over the course of a semester in 2019 I built a Datalog Scanner, Parser, Relational Database, Datalog interpreter and then optimized the rule evaluation that together compile Datalog code using discrete structures theory.
                         </p>
                         <a href="https://github.com/binDebug3/Datalog-Compiler">View Project</a>
                     </div>
@@ -337,14 +341,17 @@ I am studying mathematics in the Applied and Computational Math Emphasis with a 
                 <div class="col-sm-5 social">
                     <ul>
                         <li>
-                            <a href="https://github.com/" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
+                            <a href="https://github.com/binDebug3" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
                         </li>
+<!-- Hidden icon
                         <li>
                             <a href="https://stackoverflow.com/" target="_blank"><i class="fa fa-stack-overflow" aria-hidden="true"></i></a>
                         </li>
+-->
                         <li>
-                            <a href="https://linkedin.com/" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+                            <a href="https://www.linkedin.com/in/dallinstewart/" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
                         </li>
+<!-- Hidden Icons
                         <li>
                             <a href="https://www.facebook.com/" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a>
                         </li>
@@ -354,6 +361,7 @@ I am studying mathematics in the Applied and Computational Math Emphasis with a 
                         <li>
                             <a href="https://plus.google.com/" target="_blank"><i class="fa fa-google-plus" aria-hidden="true"></i></a>
                         </li>
+-->
                     </ul>
                 </div>
             </div>
