--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>My Portfolio</title>
+    <title>Dallin Stewart</title>
 	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 	<link rel="icon" href="favicon.ico" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900" rel="stylesheet">
@@ -210,10 +210,10 @@ I am studying mathematics in the Applied and Computational Math Emphasis with a 
                     <div class="project-info">
                         <h3>Family Map App</h3>
                         <p>
-Family Map is an application that provides a geographical view of your family history. This project offers a detailed view of where you came from by displaying information about important events in your ancestors’ lives such as birth, marriage, death, etc., and plotting their locations on a Google map. I wrote this program as part of my CS 240 Advanced Programming class in 2022.</br></br>
+The Family Map app provides a geographical view of your family history. It offers a detailed view of where you came from by displaying information about important events in your ancestors’ lives, and plotting their locations on a Google map. I wrote this program as part of my CS 240 Advanced Programming class in 2022.</br>
 
-Family Map uses a client/server architecture, which means it consists of two separate programs (a "client" program and a "server" program). The Family Map client is an Android app that lets a user view and interact with their family history information. The Family Map server is a regular, non-Android Java program that runs at a publicly-accessible location in the "cloud" or locally on your machine. </br>
-When a user runs the Family Map client app, they login so that the Family Map server can authenticating the user’s identity. Then the client app retrieves the user’s family history data from the server, which is responsible for maintaining user accounts as well as dispensing family history data for Family Map users.
+This project uses a client/server architecture. The client is an Android app that lets a user view and interact with their family history information, and the server is a Java program that runs at a in the "cloud" or locally on your machine. 
+When a user runs the Family Map client app, they login and the client app retrieves the user’s family history data from the server, which maintains user accounts and dispenses family history data for users.
                         </p>
                         <a href="https://github.com/binDebug3/FamilyMapApp">View Project</a>
                     </div>
@@ -245,7 +245,7 @@ This project, affectionately named Casper, is a python program that uses seleniu
                     <div class="project-info">
                         <h3>Vehicle Analytics Dashboard</h3>
                         <p>
-The Advanced Vehicle Analytics application (A.V.A.) for the BYU Formula E club is a dashboard that displays vehicle and driving data collected from an array of sensors designed to record everything from tire speed to steering wheel angle of an electric race car while driving.</br>
+The Advanced Vehicle Analytics application (A.V.A.) for the 2023 BYU Formula E club is a dashboard that displays vehicle and driving data collected from an array of sensors designed to record everything from tire speed to steering wheel angle of an electric race car while driving.
 In addition to providing advanced analytics and feedback, A.V.A. visualizes driving information in a format that makes it easy to understand and gain insight from the data. 
                         </p>
                         <a href="https://github.com/davider3/FormulaE/tree/main/Visualization">View Project</a>
