--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                     <p>
 I am a junior in the Applied and Computational Math Emphasis (ACME) at Brigham Young University. I love to use computer science and math to understand the world around me, make predictions, and solve problems. In my free time I enjoy playing ultimate frisbee and all kinds of board games. </br></br>
 
-When I started my college education as an electrical engineer. 
+I started my college education as an electrical engineer. 
             While I enjoyed my classes, I started to learn more about the possibilities
             that math enables like machine learning and data analysis. I had a 
             hard time letting go of my plans to become an engineer, but I get so excited learning
@@ -85,8 +85,9 @@ When I started my college education as an electrical engineer.
 ACME is a unique and intensive intersection of advanced mathematics,
             statistics, and computer science designed to prepare people to solve
             21st century problems. As the foundation for modern technology, a deep
-            understanding of mathematics has enabled me to develop successful algorithm design, 
-            effective data analysis, and innovative solutions to modern challenges.
+            understanding of mathematics has enabled me to develop skills for successful 
+	    algorithm design, effective data analysis, and creating innovative solutions 
+	    to modern challenges.
                     </p>
                 </div>
             </div>
@@ -144,6 +145,18 @@ Implemented a prescriptive dashboard with KPIs for lead conversions</br>
 Designed and published a website called azldschurches.org</br>
 Performed weekly individual and group training to improve client relationships and performance</br>
 Built a free English class in 7 cities with 42 teachers, 150 students, and 7,000 followers in 8 months
+                </p>
+            </div>
+
+	    <div data-date="June 2019 – March 2020">
+                <h3>Mexico Aguascalientes Mission</h3>
+                <h4>Financial Officer</h4>
+                <p>
+I lived abroad in central Mexico for about a year where I learned to speak Spanish, collaboratively work towards team goals, communicate more effectively, lead and train in small groups, and 
+connect with people of different cultures in foreign languages. I was responsible for the program's 
+budget of over half a million dollars, where I developed better training methods and redesigned 
+the internal payment process reduce the timeline from several weeks to less than a day. I was also in 
+charge of evacuating over one hundred volunteers from Mexico in two weeks when the coronavirus pandemic began.
                 </p>
             </div>
 
@@ -212,7 +225,7 @@ I am studying mathematics in the Applied and Computational Math Emphasis with a 
                         <p>
 The Family Map app provides a geographical view of your family history. It offers a detailed view of where you came from by displaying information about important events in your ancestors’ lives, and plotting their locations on a Google map. I wrote this program as part of my CS 240 Advanced Programming class in 2022.</br>
 
-This project uses a client/server architecture. The client is an Android app that lets a user view and interact with their family history information, and the server is a Java program that runs at a in the "cloud" or locally on your machine. 
+This project uses a client/server architecture. The client is an Android app that lets a user view and interact with their family history information, and the server is a Java program that runs in the "cloud" or locally on your machine. 
 When a user runs the Family Map client app, they login and the client app retrieves the user’s family history data from the server, which maintains user accounts and dispenses family history data for users.
                         </p>
                         <a href="https://github.com/binDebug3/FamilyMapApp">View Project</a>
@@ -229,7 +242,12 @@ When a user runs the Family Map client app, they login and the client app retrie
                     <div class="project-info">
                         <h3>Car Data Web Scraper</h3>
                         <p>
-This project, affectionately named Casper, is a python program that uses selenium to gather data used car sales online from retailers including AutoTrader, CarsDirect, CarGuru, Carvana, Lowbook, and KSL. As of the most recent update, Casper only searches for cars in the Provo, Utah area. After gathering data, Casper scores each car on how good of a deal the sale is and generates a CSV report of the current market in addition to the market history since November 2022 when I first began the project.
+This project, affectionately named Casper, is a python program that uses selenium to gather used car 
+sales data online from local retailers including AutoTrader, CarsDirect, CarGuru, Carvana, Lowbook, 
+and KSL. As of the most recent update, Casper only searches for cars in the Provo, Utah area. After 
+gathering data, Casper scores each car on how good of a deal the sale is and generates a CSV report of 
+the current market in addition to the market history since November 2022 when I first began the 
+project.
                         </p>
                         <a href="https://github.com/binDebug3/Casper">View Project</a>
                     </div>
@@ -330,7 +348,7 @@ Over the course of a semester in 2019 I built a Datalog Scanner, Parser, Relatio
             <div class="row">
                 <div class="col-sm-5 copyright">
                     <p>
-                        Copyright &copy; <span id="current-year">2022</span> Dallin Stewart
+                        Connect with me on social media here
                     </p>
                 </div>
                 <div class="col-sm-2 top">
