add yhack project

--- a/index.html
+++ b/index.html
@@ -152,11 +152,10 @@ Built a free English class in 7 cities with 42 teachers, 150 students, and 7,000
                 <h3>Mexico Aguascalientes Mission</h3>
                 <h4>Financial Officer</h4>
                 <p>
-I lived abroad in central Mexico for about a year where I learned to speak Spanish, collaboratively work towards team goals, communicate more effectively, lead and train in small groups, and 
-connect with people of different cultures in foreign languages. I was responsible for the program's 
-budget of over half a million dollars, where I developed better training methods and redesigned 
-the internal payment process reduce the timeline from several weeks to less than a day. I was also in 
-charge of evacuating over one hundred volunteers from Mexico in two weeks when the coronavirus pandemic began.
+I lived abroad in central Mexico for about a year where I learned to speak Spanish, communicate more effectively with people of different cultures, and lead and train in small groups. 
+I was responsible for the program's budget of over half a million dollars, and redesigned 
+the internal payment process reduce the reimbursement timeline from several weeks to less than a day. 
+I was also in charge of evacuating over one hundred volunteers from Mexico in two weeks when the coronavirus pandemic began.
                 </p>
             </div>
 
@@ -183,6 +182,9 @@ I am studying mathematics in the Applied and Computational Math Emphasis with a 
                 </li>
                 <li>
                     Math Department Dean's List 2022
+                </li>
+		<li>
+                    2023 YHack Best AI
                 </li>
 	    </ul>
 	    <p>Clubs and Activities</p>
@@ -223,10 +225,10 @@ I am studying mathematics in the Applied and Computational Math Emphasis with a 
                     <div class="project-info">
                         <h3>Family Map App</h3>
                         <p>
-The Family Map app provides a geographical view of your family history. It offers a detailed view of where you came from by displaying information about important events in your ancestors’ lives, and plotting their locations on a Google map. I wrote this program as part of my CS 240 Advanced Programming class in 2022.</br>
+The Family Map app provides a geographical view of your family history. It offers a detailed view of  important events in your ancestors’ lives, by plotting their locations on a Google map.</br>
 
-This project uses a client/server architecture. The client is an Android app that lets a user view and interact with their family history information, and the server is a Java program that runs in the "cloud" or locally on your machine. 
-When a user runs the Family Map client app, they login and the client app retrieves the user’s family history data from the server, which maintains user accounts and dispenses family history data for users.
+This project uses a client/server architecture. The client is an Android app that lets a user view and interact with their family history data, and the server is a Java program that runs in the cloud. 
+When a user runs the Family Map client app, they login and the client app retrieves the user’s family history data from the server, which maintains accounts and dispenses family history data.
                         </p>
                         <a href="https://github.com/binDebug3/FamilyMapApp">View Project</a>
                     </div>
@@ -245,8 +247,7 @@ When a user runs the Family Map client app, they login and the client app retrie
 This project, affectionately named Casper, is a python program that uses selenium to gather used car 
 sales data online from local retailers including AutoTrader, CarsDirect, CarGuru, Carvana, Lowbook, 
 and KSL. As of the most recent update, Casper only searches for cars in the Provo, Utah area. After 
-gathering data, Casper scores each car on how good of a deal the sale is and generates a CSV report of 
-the current market in addition to the market history since November 2022 when I first began the 
+gathering data, Casper scores each car on how good of a deal the sale is and generates a CSV report of the current market in addition to the market history since November 2022 when I first began the 
 project.
                         </p>
                         <a href="https://github.com/binDebug3/Casper">View Project</a>
@@ -267,6 +268,24 @@ The Advanced Vehicle Analytics application (A.V.A.) for the 2023 BYU Formula E c
 In addition to providing advanced analytics and feedback, A.V.A. visualizes driving information in a format that makes it easy to understand and gain insight from the data. 
                         </p>
                         <a href="https://github.com/davider3/FormulaE/tree/main/Visualization">View Project</a>
+                    </div>
+                    <!-- End .project-info -->
+                </div>
+                <!-- End .project -->
+
+                <div class="project shadow-large">
+                    <div class="project-image">
+                        <img src="images/project.jpg" />
+                    </div>
+                    <!-- End .project-image -->
+                    <div class="project-info">
+                        <h3>Celebrity Lookalike</h3>
+                        <p>
+I built this program with Jeff Hansen and Benjamin McMullion over the course of 24 hours for the 
+2023 YHack competition where we won the award for Best AI. This project uses OpenCV to detect faces, compare them to a database of faces of celebrities we scraped from the internet, estimate your age 
+and gender with OpenCV, and then tell a story about you and your celebrity twin uses GPT-3.
+                        </p>
+                        <a href="https://github.com/binDebug3/your_identity">View Project</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
@@ -310,6 +329,7 @@ Over the course of a semester in 2019 I built a Datalog Scanner, Parser, Relatio
             <li>Dash</li>
             <li>Selenium</li>
             <li>PyTorch</li>
+	    <li>OpenCV</li>
             <li>Android Programming</li>
             <li>Projection Modeling</li>
             <li>Process Automation</li>
@@ -318,13 +338,13 @@ Over the course of a semester in 2019 I built a Datalog Scanner, Parser, Relatio
             <li>Data Visualization</li>
             <li>Algorithm Optimization</li>
             <li>Linear Regression</li>
+	    <li>Graph Theory</li>
             <li>Optimization Techniques</li>
             <li>Mathematical Analysis</li>
             <li>Data Structures</li>
             <li>Discrete Structures</li>
             <li>Dynamic Programming</li>
-            <li>Complexity Analysis</li>
-            <li>Graph Theory</li>
+            <li>Complexity Analysis</li> 
         </ul>
     </div>
     <!-- End #skills -->
